fixed author-date spacing?

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ hr {
 }
 
 .author-date {
-    display: flex;
+    display: inline-flex;
 }
 
 .blog-post {
